--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Coursera Course</title>
   </head>
   <body>
-    <h1>corsers</h1>
+    <h1>Week1</h1>
   </body>
 </html>
